# teplov_g_k_private

Rational/: CMakeLists.txt
Rational/Rational/: CMakeLists.txt  Rational.cpp
Rational/prj.lab/rational/: rational.cpp
Rational/prj.test/: rational_test.cpp
teplov_g_k/: CMakeLists.txt
teplov_g_k/Rational/Rational/: Rational.h
teplov_g_k/Rational/prj.lab/rational/include/rational/: rational.hpp
teplov_g_k/prj.cw/: CMakeLists.txt
teplov_g_k/prj.cw/cmake/: CPM.cmake
teplov_g_k/prj.cw/doc/: CMakeLists.txt  Doxyfile.in
teplov_g_k/prj.cw/examples/: CMakeLists.txt  getArticleExample.cpp
teplov_g_k/prj.cw/include/: CMakeLists.txt
teplov_g_k/prj.cw/include/scienceParser/: API.hpp  Articles.hpp  CMakeLists.txt  CrossRefAPI.hpp
teplov_g_k/prj.cw/src/: CMakeLists.txt  main.cpp
teplov_g_k/prj.cw/tests/: CMakeLists.txt  test.cpp
teplov_g_k/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
teplov_g_k/prj.lab/arrayd/include/arrayd/: arrayd.hpp
teplov_g_k/prj.lab/arrayt/: CMakeLists.txt
teplov_g_k/prj.lab/arrayt/include/arrayt/: arrayt.hpp
teplov_g_k/prj.lab/geo2d/include/: geo2d.hpp
teplov_g_k/prj.lab/geo2d/include/geo2d/consepts/: coordinates.hpp
teplov_g_k/prj.lab/geo2d/include/geo2d/figures/: point.hpp  polygon.hpp  polyline.hpp
teplov_g_k/prj.lab/geo2d/include/geo2d/figures/models/: figure.h  point.h  polygon.h  polyline.h
teplov_g_k/prj.lab/geo2d/include/geo2d/space/: space.hpp  transform.hpp
teplov_g_k/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
teplov_g_k/prj.lab/matrixs/include/matrixs/: matrixs.hpp
teplov_g_k/prj.lab/rational/: CMakeLists.txt  rational.cpp
teplov_g_k/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  matrixs_test.cpp  rational_test.cpp
